--- a/dropdown/ignoredusers.html
+++ b/dropdown/ignoredusers.html
@@ -117,7 +117,7 @@ var connectedornot;
                     <!-- Nav tabs -->
                     <ul class="nav nav-tabs tabs-2 light-blue darken-3" role="tablist">
                         <li class="nav-item">
-                            <a class="nav-link active" data-toggle="tab" href="/Firebase-Group-Chat--Javascript/#panel7" role="tab"><i class="fa fa-user mr-1"></i> Login</a>
+                            <a class="nav-link active" data-toggle="tab" href="#panel7" role="tab"><i class="fa fa-user mr-1"></i> Login</a>
                         </li>
                         
                     </ul>
