--- a/index.html
+++ b/index.html
@@ -371,10 +371,10 @@ firebase.auth().onAuthStateChanged(function(user) {
                 <!-- Nav tabs -->
                 <ul class="nav nav-tabs tabs-2 light-blue darken-3" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" data-toggle="tab" href="/Firebase-Group-Chat--Javascript/#panel7" role="tab"><i class="fa fa-user mr-1"></i> Login</a>
+                        <a class="nav-link active" data-toggle="tab" href="#panel7" role="tab"><i class="fa fa-user mr-1"></i> Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="/Firebase-Group-Chat--Javascript/#panel8" role="tab"><i class="fa fa-user-plus mr-1"></i> Register</a>
+                        <a class="nav-link" data-toggle="tab" href="#panel8" role="tab"><i class="fa fa-user-plus mr-1"></i> Register</a>
                     </li>
                 </ul>
 
@@ -404,7 +404,7 @@ firebase.auth().onAuthStateChanged(function(user) {
                         <div class="modal-footer">
                             <div class="options text-center text-md-right mt-1">
                                 
-                                <p onclick="alert('This feature is coming soon......')">Forgot <a href="/Firebase-Group-Chat--Javascript/#" class="blue-text">Password?</a></p>
+                                <p onclick="alert('This feature is coming soon......')">Forgot <a href="#" class="blue-text">Password?</a></p>
                             </div>
                             
                         </div>
