--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
    <meta property="og:type" content="website" />
 <meta property="og:title" content="Tanki Online Community Chat." />
 <meta property="og:description" content="A Special Platform Built For The Players Of Tanki Online To Chat And Communicate With Eachother and Meet New Players In Tanki Online, A Simple & User Friendly Chat Application for Tanki Online Community." />
-<meta property="og:image" content="https://www.tankionlinechat.com/favicon.png" />
+<meta property="og:image" content="https://smkh-pro.github.io/Firebase-Group-Chat--Javascript/favicon.png" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="A Special Platform Built For The Players Of Tanki Online To Chat And Communicate With Eachother and Meet New Players In Tanki Online, A Simple & User Friendly Chat Application for Tanki Online Community">
 
